# DocSync-Agent

./: .env.sample  .gitignore  README.md  pyproject.toml
.docsync/: session_store.json
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-and-context.md  observability-and-evals.md  retriever.md  serving-and-config.md  tools-and-apis.md
evals/cases/: behavior-change.json  cli-change.json  function-parameter.json  function-rename.json  module-addition.json  prompt-injection.json  stale-docs.json
src/docsync/: __init__.py  analysis.py  config.py  evals.py  main.py  manual.py  models.py  state_store.py
src/docsync/adapters/: github.py  llm.py  telegram.py
src/docsync/graph/: nodes.py  router.py  state.py  workflow.py
src/docsync/patching/: builder.py
src/docsync/prompts/: analyze.py  generate.py  retrieve.py
src/docsync/retrieval/: index.py  search.py
src/docsync/validation/: validator.py
tests/: conftest.py  test_config.py  test_evals.py  test_github_adapter.py  test_http.py  test_manual.py  test_state_store.py  test_validator.py  test_workflow.py
tests/fixtures/: sample_snapshot.json
