[project]
name = "docsync-agent"
version = "0.1.0"
description = "LangGraph-based PoC for documentation updates from pull requests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.3.0",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsync"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
